--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>about me</title>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto+Slab">
 
-		<link rel="stylesheet" type="text/css" href="/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<div class="header">
