About me pic update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1 id="head">about me</h1>
 		
 		
-			<img class="image" src="https://lh3.googleusercontent.com/CSasQggT7dfmhuCx8CgspdJeeaoqFXEpcjpKFI8-_sqnknzhFLnE5BmrvuS-k4Y84YuzH0Es2Pp8p9TgdmsaRoe1c7qAY-Zr6d2GjSqCghw88_4SS8s3XrpWxKqlNDqYWrpgozRma6B1zmClmicq9lfcLM1-dQG1O3wuqdZWGmrFID7eFYBbKP6Uua9Sw3ZxNjPeoqKz-oHSNsAnl7eVkPZWe8kq1RD6Gwt5Wt2Upf_WlvF-VASpDWzp_IlboDcr1usacd-v9h8rytbUOAjUi7DMPu6mNTHiPEQaHAY6vJnshndfSTfEnq9oS5szMqfH03xQRmkecG2upgRkEfII9DQcXxyr_ZGwWPOIYxMdVqY-dyShTNlAnIcWwLBICOiAskjdBdj6_qNQ1zbVYoCHwJ9hu6dFneolpXofKYEfCgB37XH7o5Ab0K4Qmbo-5fK1Y37fdpJgfqXQc_Ur4P4No20DC-6WjgJ1f-YHL7u_G4K_M8M8wKSnbWPDJ9ak8MNlwfV3GFLXwd-qFC6fhIKSvTdq4PD_kKR-u0eDSPAW7Dil37voE5N_Vod4AyKvKlYiRThYyWrBfuEu_re3NSnZtSMfk8ustu8fAfIV9NxTpERSmOkGtFpL=w1210-h1243-no"/>
+			<img class="image" src="https://github.com/nickveil/nickveil.github.io/blob/master/aboutme_pic.jpg?raw=true"/>
 		</div>
 		<div class="main">
 			<p> Hi everyone, this is Nick Veil and I’m thrilled to be pursuing new opportunities and a new career in the world of programming. I bring along my past experiences in management, customer service and manufacturing from the sports entertainment, large equipment and energy industries. I enjoy traveling with my wife, watching my children compete in after school sports, playing with my two dogs, and an avid <a href="http://www.soonersports.com/SportSelect.dbml?DB_OEM_ID=31000&SPID=127245&SPSID=750323&DB_OEM_ID=31000&_ga=2.29758975.1750624883.1503872047-1470235193.1503872047">Oklahoma Sooner football</a> fan. I’m excited to discover what this new journey has in store!</p>
