--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>about me</title>
+		<title>Nick Veil</title>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto+Slab">
 
 		<link rel="stylesheet" type="text/css" href="style.css">
