--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-title: About Me!
+title: About Me
 ---
+		
+
+
 		<div class="header">
 			<h1 id="head">about me!</h1>
 		</div>
@@ -13,12 +16,6 @@ title: About Me!
 		<div class="main">
 			<p> Hi everyone, this is Nick Veil and I’m thrilled to be pursuing new opportunities and a new career in the world of programming. I bring along my past experiences in management, customer service and manufacturing from the sports entertainment, large equipment and energy industries. I enjoy traveling with my wife, watching my children compete in after school sports, playing with my two dogs, and am an avid <a href="http://www.soonersports.com/SportSelect.dbml?DB_OEM_ID=31000&SPID=127245&SPSID=750323&DB_OEM_ID=31000&_ga=2.29758975.1750624883.1503872047-1470235193.1503872047">Oklahoma Sooner football</a> fan. I’m excited to discover what this new journey has in store!</p>
 
-			<h2>Blog Posts</h2>
-			<ul>{% for post in site.posts %}
-			    <li><span>{{ post.date | date_to_string}}</span>&raquo;
-			      <a href="{{ post.url }}">{{ post.title }}</a>
-			    </li>
-			  {% endfor %}
-			</ul>
+			
 		</div>
 		
