--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@ layout: default
 title: About Me
 ---
 		
-
-		<div class="jumbotron">
-			<div class="profilePicDiv mx-auto d-block"></div>	
-			<div class="header-align heading">
+		
+			<div class="jumbotron">
+				<div class="profilePicDiv mx-auto d-block"></div>	
+				<div class="header-align heading">
 		  		<h1 class="display-2 header-align">Full Stack Web Developer</h1>
-				  <p class="lead"> Based in Lexington, Ky. Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, and <strong>Vue.js</strong>. If you are looking for help on a project or are looking to hire, I can help.  </p>
-				  <!-- <hr class="my-4"> -->
-				  <p class="lead">Interested in meeting up to dicuss future possibilities, let me know.</p>
-				  <p class="lead">
+		  		<div class="col-sm-12">
+					  <p> Based in Lexington, Ky. Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, and <strong>Vue.js</strong>. If you are looking for help on a project or are looking to hire, I can help.  </p>
+					  <!-- <hr class="my-4"> -->
+					  <p>Interested in meeting up to dicuss future possibilities? Let's talk.</p>
+					  
 				    <a class="btn btn-primary btn-md" href="#contact" role="button">Contact Me</a>
-				  </p>
+				  </div>
+				</div>
 			</div>
 		</div>
 
@@ -65,24 +67,21 @@ title: About Me
 			<div id="contact" data-target="#navbar-example2" data-offset="0">
 				<div class="container">
 					<h1 class="display-2">A Little Bit About Me</h1>
-					<div class="row align-items-center about">
-						<div class="col col-sm-2">
-							<div class="media">
-								<img class="rounded mx-auto d-block" width="125px" height="125px" src="https://github.com/nickveil/nickveil.github.io/blob/master/aboutme_pic.jpg?raw=true"/>
-
-
-							</div>
-						</div>
-
-						<div class="col col-sm-8 about">
-							<p>Looking for a new challenge, I recieved an opportunity to join Awesome Inc U and dive into the world of web development. I bring along transferable experiences in management, customer service and quality control. I enjoy being active in the community and learning new things and watching or competing in several sports.</p>
-							<div class="col">
-							<h4>859.533.4983</h4>  
-
-							
-							<h4><a href=""mailto:n.veil@live.com?Subject=Lets%talk">n.veil@live.com</a></h4>
-						</div>
+					<div class="col col-sm-12 about">		
+						<img class="rounded mx-auto d-block" width="125px" height="125px" src="https://github.com/nickveil/nickveil.github.io/blob/master/aboutme_pic.jpg?raw=true"/>						
 					</div>
+
+					<div class="col col-sm-12 about">
+						<p>I was looking for a new challenge and recieved an opportunity to join the Awesome Inc Bootcamp, diving into the world of web development. It has been exciting and look forward to applying what I learned in the classroom to everyday problems. I bring along transferable experiences in management, customer service and quality control. I enjoy being active in the community, trying new things and watching or competing in several sports.</p>
+					</div>
+					<div class="col col-sm-12 about">
+						<div class="row text-center">
+							<div class="contactInfo">
+								<h4>859.533.4983</h4>  
+								<h4><a class="email" href="mailto:n.veil@live.com">n.veil@live.com</a></h4>
+							</div>
+						</div>	
+					</div>		
 				</div>
 			</div>
 		
