--- a/index.html
+++ b/index.html
@@ -5,16 +5,33 @@ title: About Me
 		
 		
 			<div class="jumbotron">
-				<div class="profilePicDiv mx-auto d-block"></div>	
+				<div class="profilePicDiv mx-auto d-block">
+				</div>
 				<div class="header-align heading">
 		  		<h1 class="display-2 header-align">Full Stack Web Developer</h1>
 		  		<div class="col-sm-12">
 					  <p> Based in Lexington, Ky. Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, and <strong>Vue.js</strong>. If you are looking for help on a project or are looking to hire, I can help.  </p>
 					  <!-- <hr class="my-4"> -->
-					  <p>Interested in meeting up to dicuss future possibilities? Let's talk.</p>
-					  
-				    <a class="btn btn-primary btn-md" href="#contact" role="button">Contact Me</a>
+					  <p>Interested in meeting up to discuss future possibilities? Let's talk.</p>
+					  <div class="row">
+				    	<a class="btn btn-primary btn-md" href="#contact" role="button">Contact Me</a>
+				    </div>
+
+
 				  </div>
+
+					<div class="row">
+						<div class="links">
+							<a href="https://linkedin.com/in/nicholas-veil"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
+							<a href="https://stackoverflow.com/users/8492242/nveil?tab=profile"><i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i></a>
+							<a href="https://github.com/nickveil"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+							<a href="https://twitter.com/NickVeil"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+						</div>
+					</div>
+
+
+
+
 				</div>
 			</div>
 		</div>
