added php to experience, color changes, reworded blog landing page

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ title: My Blog
 		<div class="container blog">
 		
 			<h1 class="display-2">Webdev MicroBrew</h1>
-			<p> Further understanding of Bootcamp</p>
+			<p> Fermenting my understanding of Bootcamp concepts</p>
 			<ul>{% for post in site.posts %}
 			    <li><span>{{ post.date | date_to_string}}</span>&raquo;
 			      <a href="{{ post.url }}">{{ post.title }}</a>
