--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About Me
+title: Nick Veil
 ---
 		
 		
@@ -10,7 +10,7 @@ title: About Me
 				<div class="header-align heading">
 		  		<h1 class="display-2 header-align">Full Stack Web Developer</h1>
 		  		<div class="col-sm-12">
-					  <p> Based in Lexington, Ky. Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, <strong>Vue.js </strong>and <strong>PHP</strong>. If you are looking for help on a project or are looking to hire, I can help.  </p>
+					  <p> Based in Lexington, Ky. Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, <strong>Vue.js, </strong><strong>PHP </strong>and <strong>Laravel</strong>. If you are looking for help on a project or are looking to hire, I can help.  </p>
 					  <!-- <hr class="my-4"> -->
 					  <p>Interested in meeting up to discuss future possibilities? Let's talk.</p>
 					  <div class="row">
@@ -20,13 +20,7 @@ title: About Me
 
 				  </div>
 
-					<div class="row">
-						<div class="links">
-							<a href="https://linkedin.com/in/nicholas-veil"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
-							<a href="https://stackoverflow.com/users/8492242/nveil?tab=profile"><i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i></a>
-							<a href="https://github.com/nickveil"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
-							<a href="https://twitter.com/NickVeil"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
-						</div>
+
 					</div>
 
 
