worked out link issues remove stackoverflow link and twitter link

--- a/index.html
+++ b/index.html
@@ -17,11 +17,20 @@ title: Nick Veil
 				    	<a class="btn btn-primary btn-md" href="#contact" role="button">Contact Me</a>
 				    </div>
 
-
-				  </div>
-
+				    <div class="row ">
+							<div class="links">
+								<a href="https://linkedin.com/in/nicholas-veil"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
+								<a href="https://github.com/nickveil"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+							</div>
+						</div>
 
 					</div>
+
+
+			  </div>
+
+
+			</div>
 
 
 
