linkedin link update to  README.md and index

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ title: Nick Veil
 
 				    <div class="row ">
 							<div class="links">
-								<a href="https://linkedin.com/in/nicholas-veil"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
-								<a href="https://github.com/nickveil"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+								<a href="https://linkedin.com/in/nick-veil" target="_blank"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
+								<a href="https://github.com/nickveil" target="_blank"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
 							</div>
 						</div>
 
