added tracker screen shot

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ title: Nick Veil
 				<div class="row align-items-center portfolio">
 					<div class="col-lg">
 						
-							<img src="https://github.com/nickveil/nickveil.github.io/blob/master/_assets/Keyboard.jpg?raw=true" width="300px" height="150px">
+							<img src="_assets/trackerScreenShot.png">
 						
 					</div>
 					<div class="col-lg">
