--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Nick Veil
 				<div class="header-align heading">
 		  		<h1 class="display-2 header-align">Full Stack Web Developer</h1>
 		  		<div class="col-sm-12">
-					  <p> Based in Lexington, Ky. Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, <strong>Vue.js, </strong><strong>PHP </strong>and <strong>Laravel</strong>. If you are looking for help on a project or are looking to hire, I can help.  </p>
+					  <p> Based in Lexington, Ky. Experience with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, <strong>Vue.js</strong>, <strong>PHP </strong>and <strong>Laravel</strong>. If you are looking for help on a project or are looking to hire, I can help.  </p>
 					  <!-- <hr class="my-4"> -->
 					  <p>Interested in meeting up to discuss future possibilities? Let's talk.</p>
 					  <div class="row">
