--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ title: Nick Veil
 						
 					</div>
 					<div class="col-lg">
-						<p class="description">A personal tracker that allows users to track anything they would like and quickly look for relationships between the things they track. Built with a Laravel framework, using Bootstrap for form validation and PostGres database.</p>
+						<p class="description">A personal tracker that allows users to track anything they would like and quickly look for relationships between the things they track. Built with a Laravel framework, using Bootstrap for form validation and PostgreSQL database.</p>
 						
 				    	<a class="btn btn-primary btn-md" target="_blank" href="https://github.com/nickveil/personal-tracker" role="button">Code</a>
 				    	<a class="btn btn-primary btn-md" target="_blank" href="http://personaltrackerapp.herokuapp.com/" role="button">Demo</a>
