updated gulp and browserSync

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@ title: Nick Veil
 		</div>
 		<div class="header-align heading">
 		<h1 class="display-2 header-align">Full Stack Web Developer</h1>
+		<h2>test</h2>
 		<div class="col-sm-12">
 			<p> Based in Lincoln, NE. Experience with <strong>Drupal 7 & 8</strong>, <strong>Laravel</strong>, <strong>PHP</strong>, 
 				<strong>Vue.js</strong>, <strong>Bootstrap</strong>, <strong>HTML/CSS/JS</strong>, and <strong>SharePoint/PowerBI/Data Visualization Tools</strong>. </p>
 			<!-- <hr class="my-4"> -->
-			<p>If you are looking for help on a project or are looking to hire, I can help.<br> 
+			<p>If you are looking for help on a project or are looking to hire, I can help.<br>
 				Interested in meeting up to discuss future possibilities? Let's talk.</p>
 			<div class="row">
 				<a class="btn btn-primary btn-md" href="#contact" role="button">Contact Me</a>
