updated marquee style

--- a/index.html
+++ b/index.html
@@ -2,38 +2,79 @@
 layout: default
 title: Nick Veil
 ---
-		
+	<section id="marquee" class="marquee-bg">
+		<div class="row">
+			<div class="">
+				<div class="heading col-12">
+					<h1 class="heading-title d-block mt-5">Full Stack Web Developer</h1>
+				</div>
+			</div>
+		</div>
+		<div class="profile-img mx-auto d-block"></div>
+	</section>
+	<section id="skills" class="skill-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-lg-4">
+	        		<!-- Card Flip -->
+					<div class="card-flip">
+						<div class="flip">
+							<div class="front">
+								<!-- front content -->
+								<div class="card">
+								  
+								  <div class="card-block">
+									<h4 class="card-title">Front End</h4>
+								</div>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<div class="card">
+								  <div class="card-block">
+								    <h4 class="card-title">Card Flip</h4>
+								    <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+								  </div>
+								  <img data-src="holder.js/100px180/?text=Image" alt="Image [100%x180]" data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
+								  <div class="card-block">
+								    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								    <a href="#" class="card-link">Card link</a>
+								    <a href="#" class="card-link">Another link</a>
+								  </div>
+								</div>
+							</div>
+						</div>
+					</div>
+	        		<!-- End Card Flip -->
+				</div>
+			</div>
+		</div>
+	</section>	
 		
 	<div class="jumbotron">
-		<div class="profilePicDiv mx-auto d-block">
-		</div>
+		<div class="profilePicDiv mx-auto d-block"></div>
 		<div class="header-align heading">
-		<h1 class="display-2 header-align">Full Stack Web Developer</h1>
-		<h2>test</h2>
-		<div class="col-sm-12">
-			<p> Based in Lincoln, NE. Experience with <strong>Drupal 7 & 8</strong>, <strong>Laravel</strong>, <strong>PHP</strong>, 
-				<strong>Vue.js</strong>, <strong>Bootstrap</strong>, <strong>HTML/CSS/JS</strong>, and <strong>SharePoint/PowerBI/Data Visualization Tools</strong>. </p>
-			<!-- <hr class="my-4"> -->
-			<p>If you are looking for help on a project or are looking to hire, I can help.<br>
-				Interested in meeting up to discuss future possibilities? Let's talk.</p>
-			<div class="row">
-				<a class="btn btn-primary btn-md" href="#contact" role="button">Contact Me</a>
-			</div>
-
-			<div class="row ">
+			<h1 class="display-2 header-align">Full Stack Web Developer</h1>
+			<h2></h2>
+			<div class="col-sm-12">
+				<p> Based in Lincoln, NE. Experience with <strong>Drupal 7 & 8</strong>, <strong>Laravel</strong>, <strong>PHP</strong>, 
+					<strong>Vue.js</strong>, <strong>Bootstrap</strong>, <strong>HTML/CSS/JS</strong>, and <strong>SharePoint/PowerBI/Data Visualization Tools</strong>. </p>
+				<!-- <hr class="my-4"> -->
+				<p>If you are looking for help on a project or are looking to hire, I can help.<br>
+					Interested in meeting up to discuss future possibilities? Let's talk.</p>
+				<div class="row">
+					<a class="btn btn-primary btn-md" href="#contact" role="button">Contact Me</a>
+				</div>
+				<div class="row ">
 					<div class="links">
 						<a href="https://linkedin.com/in/nick-veil" target="_blank"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
 						<a href="https://github.com/nickveil" target="_blank"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
 					</div>
 				</div>
-
 			</div>
-
-
+		</div>
 	</div>
-
-
-	</div>
+	
 	<div id="portfolio">
 		<div class="container">
 			<h1 class="display-2" >Some of My Work</h1>
